--- a/CSS/cadastro.css
+++ b/CSS/cadastro.css
@@ -176,7 +176,7 @@ p{
     width: 100%;
     flex-direction: row;
     flex-wrap: nowrap;
-    justify-content: space-around;
+    justify-content: center;
     margin-top: 5vh;
 }
 #bt_enviar, #bt_reset{
@@ -188,4 +188,25 @@ p{
     border: solid #0E2F59;
     border-radius: 10vh;
     text-shadow: 0 2px 10px #416BBF;
+}
+.ui-progressbar{
+    height: 4vh;
+    width: 100%;
+    border: solid 0.5px #0E2F59;
+    border-radius: 10vh;
+    margin-top: 3vh;
+   
+}
+.ui-progressbar-value{
+    background-color: #0E2F59;
+    height: 100%;
+    border-radius: 10vw
+}
+
+.valido{
+    background-color: lightgreen;
+    text-transform: uppercase;
+}
+.invalido{
+    background-color: lightcoral;
 }
